--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
     <modules>
         <module>ui</module>
+        <module>picture-update</module>
+        <module>Login</module>
     </modules>
 
     <name>car_trade</name>
