--- a/car_trade_project/pojo/pom.xml
+++ b/car_trade_project/pojo/pom.xml
@@ -22,5 +22,9 @@
             <artifactId>java-jwt</artifactId>
             <version>3.18.1</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 </project>
