--- a/car_trade_project/ui/src/main/resources/application.yml
+++ b/car_trade_project/ui/src/main/resources/application.yml
@@ -19,7 +19,8 @@ dubbo:
   application:
     name: test-service-consumer
   registry:
-    address: zookeeper://127.0.0.1:2181
+    address: zookeeper://192.168.2.31:2181?
+#    address: zookeeper://127.0.0.1:2181
     timeout: 5000
   consumer:
     timeout: 50000
