--- a/car_trade_project/ui/pom.xml
+++ b/car_trade_project/ui/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.cqu</groupId>
+            <artifactId>seller_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!--添加支付宝依赖-->
 <!--        <dependency>-->
