--- a/car_trade_project/include_service/pom.xml
+++ b/car_trade_project/include_service/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.cqu</groupId>
+            <artifactId>include_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
 
         <!--添加配置助手-->
@@ -92,6 +97,12 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>2.0.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.cqu</groupId>
+            <artifactId>mappers</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
