--- a/car_trade_project/ui/pom.xml
+++ b/car_trade_project/ui/pom.xml
@@ -110,6 +110,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.cqu</groupId>
+            <artifactId>cache_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!--添加支付宝依赖-->
 <!--        <dependency>-->
