--- a/car_trade_project/pom.xml
+++ b/car_trade_project/pom.xml
@@ -50,6 +50,8 @@
         <module>menu_api</module>
         <module>include_api</module>
         <module>include_service</module>
+        <module>menu_api</module>
+        <module>menu_service</module>
     </modules>
 
     <!--声明全局依赖（子项目需要显示的引用才会继承依赖）-->
