--- a/car_trade_project/cache_service/src/main/resources/application.yml
+++ b/car_trade_project/cache_service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9096
+  port: 9097
 
 mybatis:
   mapper-locations: classpath:org/cqu/mapper/*.xml  #配置映射文件
@@ -24,7 +24,7 @@ dubbo:
   #协议
   protocol:
     name: dubbo
-    port: 20884
+    port: 20885
   #制定扫描的基础包
   scan:
     base-packages: org.cqu.buyer_service.BuyerServceImple
@@ -45,10 +45,15 @@ spring:
     password: TangHuoGuo1@3  #密码
     driver-class-name: com.mysql.jdbc.Driver  #数据库链接驱动
 
-redis:
-  database: 0
-  host: 192.168.2.77 #不确定
-  port: 6379
+  redis:
+    cluster:
+      nodes:
+       - 192.168.2.131:6379
+       - 192.168.2.134:6379
+       - 192.168.2.132:6379
+       - 192.168.2.135:6379
+       - 192.168.2.133:6379
+       - 192.168.2.136:6379
 
 logging:
   config:
