--- a/car_trade_project/pom.xml
+++ b/car_trade_project/pom.xml
@@ -162,6 +162,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.3.5.RELEASE</version>
         </dependency>
 
     </dependencies>
