--- a/car_trade_project/ui/pom.xml
+++ b/car_trade_project/ui/pom.xml
@@ -43,8 +43,16 @@
             <artifactId>include_service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.cqu</groupId>
+            <artifactId>car_include_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cqu</groupId>
+            <artifactId>cart_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--web依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -119,6 +127,12 @@
         <dependency>
             <groupId>org.cqu</groupId>
             <artifactId>menu_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.cqu</groupId>
+            <artifactId>cart_api</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
