增加了RunApplication，并修改了部分细节

--- a/car_trade_project/pom.xml
+++ b/car_trade_project/pom.xml
@@ -56,6 +56,7 @@
         <module>cart_service</module>
         <module>car_include_api</module>
         <module>car_include_service</module>
+        <module>car_include_service</module>
     </modules>
 
     <!--声明全局依赖（子项目需要显示的引用才会继承依赖）-->
