--- a/car_trade_project/cache_service/src/main/resources/application.yml
+++ b/car_trade_project/cache_service/src/main/resources/application.yml
@@ -12,19 +12,19 @@ dubbo:
     #注册中心地址
     #制定超时时间,单位毫秒
     timeout: 5000
-    address: zookeeper://192.168.2.31:2181?
+    address: zookeeper://192.168.2.31:2181?backup=192.168.2.32:2181,192.168.2.33:2181
     #    address: zookeeper://127.0.0.1:2181 #zookeeper集群
     #配置元数据中心 --> 用于存储服务的元数据,消费者在消费服务的时候只需要注册中心提供某个服务的关键数据即可,
     #将服务本身必须要但是消费者不需要的数据存放到元数据中心,这样可以提供性能和服务调度的效率
     simplified: true #注册到注册中心的URL是否采用精简模式的 （与低版本兼容）
     register: true
   metadata-report:
-    address: zookeeper://192.168.2.31:2181?
+    address: zookeeper://192.168.2.31:2181?backup=192.168.2.32:2181,192.168.2.33:2181
   #    address: zookeeper://127.0.0.1:2181
   #协议
   protocol:
     name: dubbo
-    port: 20885
+    port: 20887
   #制定扫描的基础包
   scan:
     base-packages: org.cqu.buyer_service.BuyerServceImple
