--- a/car_trade_project/pom.xml
+++ b/car_trade_project/pom.xml
@@ -2,184 +2,108 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>car_trade_project</artifactId>
+        <groupId>org.cqu</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.cqu</groupId>
-    <artifactId>car_trade_project</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>include_service</artifactId>
 
-    <!-- 父级引用 -->
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.5.RELEASE</version>
-        <relativePath/>
-    </parent>
-
-    <!--配置-->
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <dubbo.version>2.7.3</dubbo.version>
-        <springboot.dubbo.metadata.version>2.7.3</springboot.dubbo.metadata.version>
-        <zookeeper.version>3.7.0</zookeeper.version>
-        <mybatis.springboot.version>2.1.4</mybatis.springboot.version>
-        <mysql.version>8.0.23</mysql.version>
-        <druid.springboot.version>1.2.6</druid.springboot.version>
-        <pagehelper.version>1.3.0</pagehelper.version>
     </properties>
 
-    <!-- 子项目 -->
-    <modules>
-        <!--    <module>demo-consumer</module>-->
-        <!--    <module>demo-provider</module>-->
-        <module>car_service</module>
-        <module>ui</module>
-        <module>picture_service</module>
-        <module>pojo</module>
-        <module>mappers</module>
-        <module>buyer_api</module>
-        <module>buyer_service</module>
-        <module>seller_api</module>
-        <module>seller_service</module>
-        <module>cache_api</module>
-        <module>cache_service</module>
-        <module>menu_api</module>
-        <module>menu_api</module>
-        <module>include_api</module>
-        <module>include_service</module>
-        <module>menu_api</module>
-        <module>menu_service</module>
-        <module>cart_api</module>
-        <module>cart_service</module>
-        <module>car_include_api</module>
-        <module>car_include_service</module>
-        <module>car_include_service</module>
-    </modules>
-
-    <!--声明全局依赖（子项目需要显示的引用才会继承依赖）-->
-    <dependencyManagement>
-        <dependencies>
-            <!-- dubbo-start依赖 -->
-            <dependency>
-                <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo-spring-boot-starter</artifactId>
-                <version>${dubbo.version}</version>
-            </dependency>
-            <!--zookeeper 注册中心客户端引入 使用的是curator客户端 -->
-            <dependency>
-                <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo-dependencies-zookeeper</artifactId>
-                <version>${dubbo.version}</version>
-                <type>pom</type>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>slf4j-log4j12</artifactId>
-                        <groupId>org.slf4j</groupId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <!--热加载-->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-devtools</artifactId>
-                <version>2.3.5.RELEASE</version>
-                <optional>true</optional>
-            </dependency>
-            <!--dubbo元数据-->
-            <dependency>
-                <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo-metadata-report-zookeeper</artifactId>
-                <version>${springboot.dubbo.metadata.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <!--mybatis-spring-boot-starter-->
-            <dependency>
-                <groupId>org.mybatis.spring.boot</groupId>
-                <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>${mybatis.springboot.version}</version>
-            </dependency>
-            <!--mysql-->
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
-            </dependency>
-            <!--?????????: jdbc??druid ????-->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-jdbc</artifactId>
-                <version>2.3.5.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>1.1.9</version>
-            </dependency>
-            <!--druid?????-->
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid-spring-boot-starter</artifactId>
-                <version>${druid.springboot.version}</version>
-            </dependency>
-            <!--springboot启动器-->
-            <dependency>
-                <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper-spring-boot-starter</artifactId>
-                <version>${pagehelper.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.12</version>
-                <scope>test</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <!--声明全局依赖（子项目不需要显示的引用，自动继承依赖）-->
     <dependencies>
-        <!-- spring boot 依赖 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>org.cqu</groupId>
+            <artifactId>pojo</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.cqu</groupId>
+            <artifactId>include_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
+        <!--添加配置助手-->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
+        <!--添加springboot web 启动器,注意在spring boot顶层依赖管理模块中已经声明了依赖以及相关的版本,此处不用再声明版本-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!--添加dubbo springboot启动器-->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+        <!--添加dubbo dependencies zookeeper依赖-->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <type>pom</type>
+            <!--当前依赖和spring boot starter web依赖会引入一个重复的日志依赖,在此排除一个个slf4j-log4j12-->
             <exclusions>
                 <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
 
-        <!-- lombok 插件 支持某些泛型 自动生成等功能 -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
-        </dependency>
-
-        <!--redis 部署-->
+        <!--添加spring boot热部署-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-            <version>2.3.5.RELEASE</version>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <!--添加spring boot日志依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+        <!--元数据中心插件-->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-metadata-report-zookeeper</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
+        <!--测试插件-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>2.0.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.cqu</groupId>
+            <artifactId>mappers</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
